.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
11:53:59 **** Incremental Build of configuration Debug for project EJERCICIO 9-2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\EJERCICIO 9-2.o" "..\\src\\EJERCICIO 9-2.c" 
gcc -o "EJERCICIO 9-2.exe" "src\\EJERCICIO 9-2.o" "src\\calculos.o" "src\\ingresos.o" 
11:57:48 **** Incremental Build of configuration Debug for project EJERCICIO 9-2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\EJERCICIO 9-2.o" "..\\src\\EJERCICIO 9-2.c" 
..\src\EJERCICIO 9-2.c: In function 'main':
..\src\EJERCICIO 9-2.c:53:16: error: '(eEmpleado *)&empleados' is a pointer; did you mean to use '->'?
    if(empleados.isEmpety[i]==VACIO)
                ^
                ->
..\src\EJERCICIO 9-2.c:57:4: error: expected ';' before '}' token
    }
    ^
..\src\EJERCICIO 9-2.c:44:6: warning: variable 'auxPosicion' set but not used [-Wunused-but-set-variable]
  int auxPosicion;//cuando encuentro una posicion vacia la guardo aca
      ^~~~~~~~~~~
11:57:57 **** Incremental Build of configuration Debug for project EJERCICIO 9-2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\EJERCICIO 9-2.o" "..\\src\\EJERCICIO 9-2.c" 
..\src\EJERCICIO 9-2.c: In function 'main':
..\src\EJERCICIO 9-2.c:53:16: error: '(eEmpleado *)&empleados' is a pointer; did you mean to use '->'?
    if(empleados.isEmpety[i]==VACIO)
                ^
                ->
..\src\EJERCICIO 9-2.c:44:6: warning: variable 'auxPosicion' set but not used [-Wunused-but-set-variable]
  int auxPosicion;//cuando encuentro una posicion vacia la guardo aca
      ^~~~~~~~~~~
11:58:22 **** Incremental Build of configuration Debug for project EJERCICIO 9-2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\EJERCICIO 9-2.o" "..\\src\\EJERCICIO 9-2.c" 
..\src\EJERCICIO 9-2.c: In function 'main':
..\src\EJERCICIO 9-2.c:44:6: warning: variable 'auxPosicion' set but not used [-Wunused-but-set-variable]
  int auxPosicion;//cuando encuentro una posicion vacia la guardo aca
      ^~~~~~~~~~~
gcc -o "EJERCICIO 9-2.exe" "src\\EJERCICIO 9-2.o" "src\\calculos.o" "src\\ingresos.o" 
11:58:34 **** Incremental Build of configuration Debug for project EJERCICIO 9-2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\EJERCICIO 9-2.o" "..\\src\\EJERCICIO 9-2.c" 
..\src\EJERCICIO 9-2.c: In function 'main':
..\src\EJERCICIO 9-2.c:44:6: warning: variable 'auxPosicion' set but not used [-Wunused-but-set-variable]
  int auxPosicion;//cuando encuentro una posicion vacia la guardo aca
      ^~~~~~~~~~~
gcc -o "EJERCICIO 9-2.exe" "src\\EJERCICIO 9-2.o" "src\\calculos.o" "src\\ingresos.o" 
12:00:04 **** Incremental Build of configuration Debug for project EJERCICIO 9-2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\EJERCICIO 9-2.o" "..\\src\\EJERCICIO 9-2.c" 
gcc -o "EJERCICIO 9-2.exe" "src\\EJERCICIO 9-2.o" "src\\calculos.o" "src\\ingresos.o" 
Info: Nothing to build for EJERCICIO 9-2
Info: Nothing to build for EJERCICIO 9-2
12:08:01 **** Incremental Build of configuration Debug for project EJERCICIO 9-2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\EJERCICIO 9-2.o" "..\\src\\EJERCICIO 9-2.c" 
gcc -o "EJERCICIO 9-2.exe" "src\\EJERCICIO 9-2.o" "src\\calculos.o" "src\\ingresos.o" 
12:08:40 **** Incremental Build of configuration Debug for project EJERCICIO 9-2 ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -o "src\\ingresos.o" "..\\src\\ingresos.c" 
gcc -o "EJERCICIO 9-2.exe" "src\\EJERCICIO 9-2.o" "src\\calculos.o" "src\\ingresos.o" 
